# wavernn.rs

./: .gitignore  Cargo.toml  README.md
matrices/mels/: output.cpp-4.mel
src/: layers.rs  lib.rs  parser.rs
